# alignerr-task-management

./: .coverage  README.md  pyproject.toml
application/usecases/complete_task/: complete_task_interface.py  complete_task_port.py
application/usecases/create_task/: create_task_interface.py  create_task_port.py
application/usecases/delete_task/: delete_task_interface.py  delete_task_port.py
application/usecases/find_task/: find_task_interface.py  find_task_port.py
application/usecases/list_tasks/: list_tasks_interface.py  list_tasks_port.py
application/usecases/update_task/: update_task_interface.py  update_task_port.py
src/alignerr_tasker.egg-info/: PKG-INFO  SOURCES.txt
src/domain/: errors.py  task.py
src/domain/ports/: task_repository.py
tests/domain/: test_task.py
